--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '7.4' # Specify your PHP version
+        php-version: '8.0' # Specify your PHP version
         extensions: bcmath, gmp
         coverage: none
         tools: none
@@ -30,14 +30,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10' # Specify your Python version
+        python-version: '3.10' # Update to a supported Python version
 
     - name: Install Python Dependencies
       run: |
         python3 -m pip install --upgrade pip
-        # If your Python script requires additional packages, install them here
-        # Example:
-        # python3 -m pip install -r requirements.txt
+        python3 -m pip install netaddr
 
     - name: Run Test Script
       run: |
